samples/_failures_safe/1761357361_ec10f0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37c56d54.c: In function ‘main’:
./samples/SAFE/__tmp_37c56d54.c:143:12: error: missing terminating " character
  143 |     printf("Tokens found
      |            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_37c56d54.c:143:5: error: expected expression at end of input
  143 |     printf("Tokens found
      |     ^~~~~~
./samples/SAFE/__tmp_37c56d54.c:143:5: error: expected declaration or statement at end of input
